<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".display_Students">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/image1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextName"
            android:layout_marginLeft="35dp"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textViewCpr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewName"
            android:layout_alignLeft="@+id/textViewName"
            android:layout_alignBottom="@+id/editTextCpr"
            android:layout_marginStart="-4dp"
            android:layout_marginLeft="-4dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cpr"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textViewStreet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextEmail"
            android:layout_alignStart="@+id/textViewCpr"
            android:layout_alignLeft="@+id/textViewCpr"
            android:text="@string/street"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewName"
            android:layout_alignLeft="@+id/textViewName"
            android:layout_alignBottom="@+id/editTextEmail"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="0dp"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textViewSkype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignBottom="@+id/editTextEmail"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="-41dp"
            android:lineSpacingExtra="10sp"
            android:text="@string/skype"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />


        <EditText
            android:id="@+id/editTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEmail"
            android:layout_alignEnd="@+id/editTextName"
            android:layout_alignRight="@+id/editTextName"
            android:layout_marginTop="58dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:textColor="@android:color/white"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/editTextStreet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextCpr"
            android:layout_alignStart="@+id/editTextName"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="11dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/editTextCpr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextName"
            android:layout_alignStart="@+id/editTextStreet"
            android:layout_alignLeft="@+id/editTextStreet"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="13dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="phone|text"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextStreet"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/textViewCpr"
            android:layout_toRightOf="@+id/textViewCpr"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:onClick="run"
            android:text="@string/save" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextField"
            android:layout_alignRight="@id/button1"
            android:layout_centerInParent="true"
            android:layout_marginTop="145dp"
            android:onClick="run"
            android:text="@string/update" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextField"
            android:layout_alignRight="@id/button1"
            android:layout_centerInParent="true"
            android:layout_marginTop="200dp"
            android:onClick="run"
            android:text="@string/share" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextField"
            android:layout_alignRight="@id/button1"
            android:layout_centerInParent="true"
            android:layout_marginTop="250dp"
            android:onClick="makeCall"
            android:text="@string/make_call" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="13dp"
            android:layout_toEndOf="@+id/textViewCpr"
            android:layout_toRightOf="@+id/textViewCpr"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@+id/editTextEmail"
            android:textColor="@android:color/white" />


        <TextView
            android:id="@+id/textViewField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextField"
            android:layout_alignBottom="@+id/editTextField"
            android:layout_marginLeft="35dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="3dp"
            android:layout_toStartOf="@+id/editTextField"
            android:layout_toLeftOf="@+id/editTextField"
            android:text="@string/study"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/editTextSkype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEmail"
            android:layout_alignLeft="@+id/editTextEmail"
            android:ems="10"
            android:inputType="text"
            android:textColor="@android:color/white" />


    </RelativeLayout>
</ScrollView>